--- a/Exercise_15.html
+++ b/Exercise_15.html
@@ -16,7 +16,7 @@ radio del círculo lo proporcionará el usuario.-->
 
             function area(radio){ 
             
-            return Math.PI * radio; } 
+            return Math.PI * radio * radio; } 
 
             function perimetro(radio){ 
             
