--- a/Exercise_2.html
+++ b/Exercise_2.html
@@ -16,7 +16,7 @@ perimetro = 2 * PI * radio-->
 
         <script> 
             var radio = prompt("ingrese el valor del radio de una circunferencia");
-            var area = Math.PI * radio;
+            var area = Math.PI * radio * radio;
             var perimetro = 2 * Math.PI * radio;
             alert("el área es "+area+"y el perímetro es "+perimetro);
         </script>
